--- a/theater/src/Components/App-Main.css
+++ b/theater/src/Components/App-Main.css
@@ -15,17 +15,51 @@
   border-radius: 50px;
   background-image: linear-gradient(.45turn,#448A6D 25px, #448A86 600px);
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .seats{
   width: 80%;
-  padding-top: 25px;
-  height: 25%;
-  border: 1px solid red;
+  height: 105%;
   display: grid;
-  grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
-  column-gap: 20px;
-  align-items: center;
-  justify-content: center;
+  grid-template-columns: 70px 70px 70px 70px 70px 70px 70px ;
+  column-gap: 10px;
+  border: 1px solid gray;
+}
+
+.seats button{
+  width: 70px;
+  height: 70px;
+}
+
+.seats button:active{
+  animation: koltuk;
+  animation-fill-mode: both;
+  transition: 5s;
+
+  
+}
+
+.taken{
+  background-image: linear-gradient(.45turn,#982A26 25px, #983D26 600px);
+}
+
+.avalaible{
+  background-image: linear-gradient(.45turn,#2E9D2E 25px, #2E9D53 600px);
+}
+
+@keyframes koltuk {
+  0%{
+    background-image: linear-gradient(.45turn,#2E9D2E 25px, #2E9D53 600px);
+  }
+
+  50%{
+    background-image: linear-gradient(.45turn,#8E6F30 25px, #8E5130 600px);
+  }
+
+  100%{
+    background-image: linear-gradient(.45turn,#982A26 25px, #983D26 600px);
+  }
+  
 }
