--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -2,3 +2,28 @@ body{
   background-color: rgb(25, 25, 25);
   color: white;
 }
+
+.portal{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: gray;
+  color: black;
+  padding: 50px;
+  z-index: 1000;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.black{
+  position: fixed;
+  z-index: 1000;
+  background-color: rgb(0, 0, 0, 0.7);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
