--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -3,25 +3,23 @@ body{
   color: white;
 }
 
-.portal{
+.welcome-message{
   position: fixed;
+  z-index: 1000;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: gray;
-  color: black;
-  padding: 50px;
-  z-index: 1000;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.black{
-  position: fixed;
-  z-index: 1000;
+.background-cancel{
+  z-index: 999;
+  opacity: 1;
   background-color: rgb(0, 0, 0, 0.7);
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
