--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -34,3 +34,13 @@ body{
 .invest-results p{
   margin-right: 10px;
 }
+
+.contact-section{
+  opacity: 0;
+  transition: 1s;
+}
+
+.active-contact{
+  opacity: 1;
+}
+
