New NavBar added and its active

--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -36,11 +36,11 @@ body{
 }
 
 .contact-section{
-  opacity: 0;
+  visibility: hidden;
   transition: 1s;
 }
 
 .active-contact{
-  opacity: 1;
+  visibility: visible;
 }
 
