--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -52,9 +52,10 @@ body{
   position: fixed;
   top: 50%;
   bottom: 50%;
-  left: -50%;
-  right: -50%;
+  left: 50%;
+  right: 50%;
   border: 1px solid red;
+  color: white;
   
   
   
