--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -59,6 +59,23 @@ body button{
 dialog{
   background-color: rgb(25, 25, 25);
   color: white;
+  background: rgba(0, 0, 0, 0.5); 
+  backdrop-filter: blur(5px); 
   
+}
+
+dialog form button{
+  padding: 10px;
+}
+
+.karartma{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px); 
+
 }
 
