--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -57,14 +57,127 @@ body button{
   margin-bottom: 10px;
   border-radius: 5px;
   border: none;
-  background-image: linear-gradient(.15turn,#FA9F7A 25px, #B37AFA 95px);
+  background-image: linear-gradient(.15turn,#FA9F7A 25px, #B37AFA 95px); 
   color: white;
-  transition: 1s;
 }
 
+
+
 .to-do nav button:hover{
-  background-image: linear-gradient(.15turn,#7AFAE6 25px, #FAF77A 95px);
-  color: #B37AFA;
+  /* background-image: linear-gradient(.15turn,#7AFAE6 25px, #FAF77A 95px); */
+  color: white;
+  animation: change-color 1s ease-in forwards alternate;
+  cursor: pointer;
+  animation-duration: 3s;
+
+
+}
+
+@keyframes change-color{
+
+  0%{
+    background-image: linear-gradient(.15turn,#DB978A 25px, #DBB38A 95px);
+  }
+
+  5% {
+    background-image: linear-gradient(.15turn,#DBA68B 25px, #DB8A8F 95px);
+  }
+
+  10%{
+    background-image: linear-gradient(.15turn,#DBBF8A 25px, #DB8A8C 95px);
+
+  }
+
+  15%{
+    background-image: linear-gradient(.15turn,#DBA68A 25px, #DC988B 95px);
+
+  }
+
+  20%{
+    background-image: linear-gradient(.15turn,#DB8ABD 25px, #DBB48A 95px);
+
+  }
+
+  25%{
+    background-image: linear-gradient(.15turn,#D98FDB 25px, #DB928F 95px);
+  }
+
+  30%{
+    background-image: linear-gradient(.15turn,#DC8EB1 25px, #C08FDB 95px);
+
+  }
+
+  35%{
+    background-image: linear-gradient(.15turn,#DB9F8F 25px, #B286DB 95px);
+
+  }
+
+  40%{
+    background-image: linear-gradient(.15turn,#DB86C0 25px, #D684DB 95px);
+
+  }
+
+  45%{
+    background-image: linear-gradient(.15turn,#7B79DB 25px, #BB79DB 95px);
+
+  }
+
+  50%{
+    background-image: linear-gradient(.15turn,#9C79DB 25px, #7996DB 95px);
+
+  }
+
+  55%{
+    background-image: linear-gradient(.15turn,#76AEDB 25px, #7F76DB 95px);
+
+  }
+
+  60%{
+    background-image: linear-gradient(.15turn,#768EDC 25px, #76CEDB 95px);
+
+  }
+
+  65%{
+    background-image: linear-gradient(.15turn,#A076DB 25px, #74D6DB 95px);
+
+  }
+
+  70%{
+    background-image: linear-gradient(.15turn,#7495DB 25px, #75B6DB 95px);
+
+  }
+
+  75%{
+    background-image: linear-gradient(.15turn,#74DBBE 25px, #7474DB 95px);
+
+  }
+
+  80%{
+    background-image: linear-gradient(.15turn,#A5DB88 25px, #B5DB91 95px);
+
+  }
+
+  85%{
+    background-image: linear-gradient(.15turn,#DBD771 25px, #DCD16C 95px);
+
+  }
+
+  90%{
+    background-image: linear-gradient(.15turn,#DB9579 25px, #DCAE8E 95px);
+
+  }
+
+  95%{
+    background-image: linear-gradient(.15turn,#DBB475 25px, #DCB28A 95px);
+
+  }
+
+  100%{
+    background-image: linear-gradient(.15turn,#D78FDB 25px, #DB71B6 95px);
+
+
+  }
+
 }
 
 .to-do-section{
