--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -26,7 +26,7 @@ section{
 }
 
 .to-do nav{
-  border-right: 1px solid red;
+  border-right: 3px solid black;
   height: 100%;
   width: 25%;
   display: flex;
@@ -47,7 +47,7 @@ section{
 }
 
 .to-do-header{
-  border-bottom: 1px solid black;
+  border-bottom: 3px solid black;
   width: 100%;
   height: 5vh;
   display: flex;
@@ -58,6 +58,7 @@ section{
 
 .to-do-header input{
   padding: 8px;
+  width: 300px;
   border: none;
   border-radius: 4px;
   background-color: black;
@@ -69,7 +70,19 @@ section{
 .to-do-header input::placeholder{
   color: white;
   font-family: 'Spline Sans', sans-serif;
-
+  
 }
+
+
+.to-do-header button{
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(25, 25, 25);
+  color: white;
+  font-family: 'Spline Sans', sans-serif;
+  cursor: pointer;
+}
+
 
 
