--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -88,5 +88,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   cursor: pointer;
 }
 
+.current-page{
+  width: 100%;
+  height: 100%;
+}
+
 
 
