--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -75,7 +75,9 @@ section{
 
 input[type="date"]::-webkit-calendar-picker-indicator {
   filter: invert(1); /* Renk tersleme, icon rengini değiştirir */
+  cursor: pointer;
 }
+
 
 
 .to-do-header button{
@@ -101,6 +103,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   align-items: center;
 }
 
+.work button{
+  margin-right: 25px;
+}
+
 .remove-btn{
   padding: 7px;
   border-radius: 6px;
@@ -109,6 +115,17 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background-color: #FF5E5E;
   color: white;
 }
+
+.complete-btn{
+  padding: 7px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  background-color: #66FF8C;
+  
+}
+
+
 
 .work p{
   margin-right: 35px;
