--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -26,7 +26,7 @@ section{
 }
 
 .to-do nav{
-  border-right: 3px solid black;
+  border-right: 3px solid #FFDAB9;
   height: 100%;
   width: 25%;
   display: flex;
@@ -47,7 +47,7 @@ section{
 }
 
 .to-do-header{
-  border-bottom: 3px solid black;
+  border-bottom: 3px solid #FFDAB9;
   width: 100%;
   height: 5vh;
   display: flex;
