--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -155,6 +155,47 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   height: 100%;
 }
 
+.no-task{
+  width: 100%;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.no-task button{
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(25, 25, 25);
+  color: white;
+  font-family: 'Spline Sans', sans-serif;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.no-task button:hover{
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: white;
+  color: black;
+  font-family: 'Spline Sans', sans-serif;
+  cursor: pointer;
+}
+
+.no-task button:active{
+  padding: 7px;
+  border-radius: 5px;
+  border: none;
+  background-color: white;
+  color: black;
+  font-family: 'Spline Sans', sans-serif;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
 .work{
   display: flex;
   flex-direction: row;
