--- a/theater/src/App.css
+++ b/theater/src/App.css
@@ -25,7 +25,7 @@ section{
   color: white;
 }
 
-.to-do nav{
+.to-do-nav{
   border-right: 3px solid #ADD8E6;
   height: 100%;
   width: 25%;
@@ -33,17 +33,16 @@ section{
   flex-direction: column;
   text-align: center;
   align-items: center;
-  background-color: #4c3a16;
+  background-color: #2c3e50;
   transition: 1s;
   border-radius: 5px;
-  
+  position: relative;
+
 }
 
-.to-do nav:hover{
-  background-color: #735d1f;
-}
 
-.to-do nav button{
+
+.to-do-nav button{
   margin-bottom: 35px;
   padding: 10px;
   border-radius: 5px;
@@ -54,7 +53,7 @@ section{
   cursor: pointer;
 }
 
-.to-do nav button:hover{
+.to-do-nav button:hover{
   animation: changeColor 3s infinite alternate;
   animation-delay: 0.1s;
   transition-delay: 0.1s;
@@ -161,6 +160,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .current-page{
   width: 100%;
   height: 100%;
+
 }
 
 .no-task{
@@ -265,6 +265,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   padding-left: 15px;
 }
 
+.work-display{
+  position: relative; 
+}
+
 
 .dialog{
   padding: 0px 15px;
@@ -319,7 +323,60 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   transition: 1s;
 }
 
+.hmb{
+  position: absolute;
+  left: 0%;
+  bottom: -3%;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(25, 25, 25);
+  color: white;
+  font-family: 'Spline Sans', sans-serif;
+  cursor: pointer;
+}
 
+.open-nav-btn{
+  position: absolute;
+  left: 0%;
+  bottom: -3%;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(25, 25, 25);
+  color: white;
+  font-family: 'Spline Sans', sans-serif;
+  cursor: pointer;
+}
+
+.closed-nav{
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  background-color: #2c3e50;
+  border-radius: 5px;
+  position: relative;
+  width: 0px;
+  background-color: white;
+  visibility: hidden;
+  opacity: 0;
+  transition: 1s;  
+  flex-shrink: 0;
+}
+
+
+.closed-nav button{
+  margin-bottom: 35px;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(25, 25, 25);
+  color: white;
+  font-family: 'Spline Sans', sans-serif;
+  cursor: pointer;
+}
 
 
 
